# sena_ws

devel/: .catkin
devel/include/sena_msgs/: BallHandleResponse.h  KinematicsForward.h  KinematicsForwardRequest.h  KinematicsForwardResponse.h  KinematicsInverse.h  KinematicsInverseResponse.h  ShootResponse.h  Velocity.h
devel/lib/open_base/: open_base_kinematics  open_base_main  open_base_odometry
devel/lib/pkgconfig/: open_base.pc  sena_controller.pc  sena_msgs.pc
devel/lib/python3/dist-packages/sena_msgs/msg/: _Velocity.py
devel/lib/sena_controller/: encoder  kinematics  sena_controller  sena_kinematics
devel/share/open_base/cmake/: open_base-msg-paths.cmake  open_baseConfig.cmake
devel/share/roseus/ros/open_base/: manifest.l
devel/share/roseus/ros/sena_msgs/: manifest.l
devel/share/roseus/ros/sena_msgs/srv/: Shoot.l  (+3 more)
devel/share/sena_controller/cmake/: sena_controllerConfig.cmake
devel/share/sena_msgs/cmake/: sena_msgs-msg-paths.cmake  sena_msgsConfig.cmake
src/sena/open_base/launch/: parameter.launch
src/sena/open_base/urdf/: description.urdf
src/sena/open_base/xacro/: rim.urdf.xacro
src/sena/sena_controller/: CMakeLists.txt
src/sena/sena_controller/scripts/: Main.py  TerimaArdu.py  chase_the_ball.py  motor_data.py  node_motor.py  sena_keyboard_control.py
src/sena/sena_controller/src/: kinematics.cpp  sena_controller.cpp  sena_kinematics.cpp  sub_enc.cpp
src/sena/sena_msgs/: CMakeLists.txt
src/sena/sena_msgs/msg/: Enc.msg  Velocity.msg
src/sena/sena_msgs/srv/: BallHandle.srv  KinematicsForward.srv  KinematicsInverse.srv  Shoot.srv
(+28 files in other folders)
